# FusionExtractor

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml
examples/: extract.py
fusionextractor/: __init__.py  exceptions.py  f3z.py
temp/: IOMOD-AD5593R-v2_0.f3z
tests/: conftest.py  test_integration.py
