[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fusionextractor"
version = "0.1.0"
description = "Extract resources from Autodesk Fusion Electronics .f3z project files"
requires-python = ">=3.9"

[project.optional-dependencies]
zstd = ["zipfile-zstd"]
