[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fusionextractor"
version = "1.0.0"
description = "Extract resources from Autodesk Fusion Electronics .f3z project files"
authors = [{ name = "Jonathan Oxer", email = "jon@oxer.com.au" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["fusion", "eagle", "schematic", "pcb", "f3z", "electronics"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.optional-dependencies]
zstd = ["zipfile-zstd"]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["fusionextractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
